# neuroreader

./: .gitignore  README.md  setup.sh
backend/: .env.example  parcellation.py  pyproject.toml  requirements.txt  server.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
