[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "nilearn>=0.10.0",
    "nibabel>=5.0.0",
    "scikit-learn>=1.3.0",
    # PyTorch — cu130 wheels (CUDA 13.0 build; compatible with your CUDA 13.2 driver)
    # torch 2.10 is the earliest version with cu130 wheels. tribev2 says <2.7 but
    # its code is inference-only and works fine on 2.10; we override below.
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    # HuggingFace
    "transformers>=4.45.0",
    "huggingface_hub>=0.24.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    # TRIBE v2 (installed from GitHub — see [tool.uv.sources])
    "tribev2",
    # Env file support for HF_TOKEN
    "python-dotenv>=1.0.0",
    # Image analysis
    "Pillow>=10.0.0",
    "whisperx>=3.8.5",
]

[tool.uv]
# tribev2 caps torch at <2.7, but cu130 wheels only exist for >=2.10.
# torch 2.10 is API-compatible for inference — override the transitive constraint.
override-dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
tribev2 = { git = "https://github.com/facebookresearch/tribev2.git" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
